fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ a:hover {
   }
 
   #portfolio {
-    height: 3750px;
+    height: 3550px;
     padding: 70px;
   }
 
